# squidclamav

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.libarchive  acinclude.m4  aclocal.m4  autoconf.h  autoconf.h.in  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.in.orig  configure.orig  libtool
.github/workflows/: main.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cgi-bin/: clwarn.cgi  clwarn.cgi.de_DE  clwarn.cgi.en_EN  clwarn.cgi.fr_FR  clwarn.cgi.ja_JP  clwarn.cgi.pt_BR  clwarn.cgi.ru_RU
config/: config.guess  depcomp  install-sh  ltmain.sh
debian/: build-orig.sh  changelog  control  copyright  libc-icap-mod-squidclamav.README.Debian  libc-icap-mod-squidclamav.docs  libc-icap-mod-squidclamav.examples  libc-icap-mod-squidclamav.install  libc-icap-mod-squidclamav.pattern-update  libc-icap-mod-virus-scan.README.Debian  libc-icap-mod-virus-scan.install  libc-icap-mod-virus-scan.pattern-update  rules  watch
debian/tests/: control  squidclamav  toolbox.sh
doc/: README  SquidClamav.pod  squidclamav.1
etc/: Makefile.am  Makefile.in  squidclamav.conf
etc/templates/en/: MALWARE_FOUND
src/: Makefile.am  Makefile.am.orig  Makefile.in  squidclamav.c  squidclamav.h
src/.deps/: squidclamav.Plo
